--- a/Xplore_rules/prepare_sector_network.ipynb
+++ b/Xplore_rules/prepare_sector_network.ipynb
@@ -29,7 +29,7 @@
     "prefix = ''\n",
     "\n",
     "### Network\n",
-    "clusters = 5\n",
+    "clusters = 8\n",
     "opts = ''\n",
     "sector_opts = ''\n",
     "horizon = '2030'"
@@ -242,9 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the aggregated capacity per carrier? \n",
-    "\n",
-    "How many buses have generators for each carrier? How many of them have zero capacity?"
+    "What is the aggregated capacity per carrier? What is the potential capacity per carrier?"
    ]
   },
   {
@@ -255,10 +253,134 @@
    "source": [
     "gg.groupby('carrier').agg(\n",
     "    Total_capacity=pd.NamedAgg(column='p_nom', aggfunc='sum'),\n",
-    "    Buses=pd.NamedAgg(column='p_nom', aggfunc='size'),\n",
-    "    Buses_zero_capacity=pd.NamedAgg(column='p_nom', aggfunc=lambda x: (x == 0).sum()),\n",
-    "    Buses_non_zero_capacity=pd.NamedAgg(column='p_nom', aggfunc=lambda x: (x != 0).sum()),\n",
+    "    Total_max_capacity=pd.NamedAgg(column='p_nom_max', aggfunc='sum'),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summary by resource class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solar and wind carries may have classes. Show a table with a feature per bus and class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "### Select carrier\n",
+    "carrier = 'onwind'\n",
+    "\n",
+    "### Select feature (uncomment one of the following):\n",
+    "feature = 'p_nom'\n",
+    "#feature = 'p_nom_max'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Table\n",
+    "if ('wind' in carrier or 'solar' in carrier):   \n",
+    "    ### Filter\n",
+    "    gg_filtered = gg[gg['carrier']==carrier][['bus', 'p_nom', 'p_nom_max']]\n",
+    "    ### Add class column\n",
+    "    gg_filtered['resource_class'] = gg_filtered.index.to_series().str.split(\" \").str[-2]\n",
+    "    ### MW to GW\n",
+    "    gg_filtered[['p_nom', 'p_nom_max']] = gg_filtered[['p_nom', 'p_nom_max']]/1000\n",
+    "    ### Make pivot\n",
+    "    gg_pivot = gg_filtered.pivot(index=\"bus\", columns=\"resource_class\", values=feature)\n",
+    "\n",
+    "    styled_table = gg_pivot.style \\\n",
+    "        .set_caption(f\"Table with {feature} [GW] for {carrier}, according to bus and class.\") \\\n",
+    "        .format(\"{:.2f}\") \\\n",
+    "        .background_gradient(cmap=\"Blues\")  \n",
+    "    \n",
+    "    display(styled_table)\n",
+    "\n",
+    "else:\n",
+    "     print(f'Carrier {carrier} is not solar or wind type.. does it contain classes?')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add a bar plot showing `p_nom` and `p_nom_max`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "## bar width\n",
+    "width = 0.3 \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "\n",
+    "df_sorted = gg_filtered.sort_values([\"bus\", \"resource_class\"])\n",
+    "\n",
+    "buses = df_sorted[\"bus\"].unique()\n",
+    "resources = df_sorted[\"resource_class\"].unique()\n",
+    "\n",
+    "x = np.arange(len(buses))                 \n",
+    "offsets = np.linspace(-width/2.5, width/2.5, len(resources))  \n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "\n",
+    "colors = {\n",
+    "    \"p_nom_max\": \"#cfe2f3\",\n",
+    "    \"p_nom\": \"#08306b\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "metrics_order = [\"p_nom_max\", \"p_nom\"]\n",
+    "\n",
+    "# To control added labels\n",
+    "labels_added = set()\n",
+    "\n",
+    "for i, res in enumerate(resources):\n",
+    "    df_res = df_sorted[df_sorted[\"resource_class\"] == res]\n",
+    "    pos = x + offsets[i]\n",
+    "    \n",
+    "    for metric in metrics_order:\n",
+    "        label = metric if metric not in labels_added else None\n",
+    "        ax.bar(\n",
+    "            pos,\n",
+    "            df_res[metric],\n",
+    "            width=width/3,\n",
+    "            color=colors[metric],\n",
+    "            alpha=0.7,\n",
+    "            label=label\n",
+    "        )\n",
+    "        labels_added.add(metric)\n",
+    "\n",
+    "ax.set_xticks(x)\n",
+    "ax.grid(axis=\"y\", linestyle=\"--\", alpha=0.6)\n",
+    "ax.set_xlabel(\"Bus\", fontsize=16)\n",
+    "ax.set_ylabel(\"Capacity [GW]\", fontsize=16)\n",
+    "ax.set_xticklabels(buses, fontsize=14)\n",
+    "ax.tick_params(axis=\"y\", labelsize=14)\n",
+    "ax.legend(fontsize=14)\n",
+    "\n",
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -287,6 +409,9 @@
     "\n",
     "### Select carrier\n",
     "carrier = 'onwind'\n",
+    "\n",
+    "### For solar & onwind carriers, select the class number ('all' to aggregate all classes)\n",
+    "resource_class = 'all'\n",
     "\n",
     "### Select feature (uncomment one of the following):\n",
     "# feature = 'area' \n",
@@ -323,7 +448,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_generators(carrier, n, feature, ax, gdf_regions, params['map_network_generators'], params_local)"
+    "xp.map_network_generators(carrier, n, feature, ax, gdf_regions, resource_class, params['map_network_generators'], params_local)"
    ]
   },
   {
@@ -371,7 +496,7 @@
     "    xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "    ### Add network feature aggregated at NUTS regions\n",
-    "    xp.map_NUTS_generators(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_generators'], params_local)\n"
+    "    xp.map_NUTS_generators(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, resource_class, params['map_NUTS_generators'], params_local)\n"
    ]
   },
   {
@@ -498,11 +623,14 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
+    "\n",
+    "### Select carrier\n",
     "carrier = 'onwind'\n",
     "\n",
-    "# For wind and solar, define class (number or 'all').\n",
-    "gen_class = 'all'\n",
+    "### For solar & onwind carriers, select the class number ('all' to plot all classes individually)\n",
+    "resource_class = 'all'\n",
     "    \n",
+    "### Define period\n",
     "start = '2023-03-01'\n",
     "end = '2023-03-10'\n",
     "\n",
@@ -512,13 +640,135 @@
     "fig_size = [10,4]\n",
     "fig, ax = plt.subplots(figsize=fig_size)\n",
     "\n",
-    "if ('wind' in carrier or 'solar' in carrier) and gen_class != 'all':\n",
-    "    ggt_pmaxpu.loc[start:end].filter(like=f'{gen_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "if ('wind' in carrier or 'solar' in carrier) and resource_class != 'all':\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=f'{resource_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
     "else:\n",
     "    ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
     "\n",
     "ax.grid(True, linestyle='--', alpha=0.25)\n",
     "ax.set_ylabel('')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summary by resource class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solar and wind carries may have classes. Show a table with a feature per bus and class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "### Select carrier\n",
+    "carrier = 'onwind'\n",
+    "\n",
+    "### Select feature (uncomment one of the following):\n",
+    "feature = 'CF'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Table\n",
+    "if ('wind' in carrier or 'solar' in carrier):   \n",
+    "    ### Filter\n",
+    "    ggt_pmaxpu_filtered = ggt_pmaxpu.filter(like=carrier, axis=1).mean().to_frame(name='CF')\n",
+    "    ### Add class and bus columns. Use multi-index with 'bus' and 'carrier'    \n",
+    "    split_index = ggt_pmaxpu_filtered.index.to_series().str.rsplit(' ', n=2, expand=True)\n",
+    "    ggt_pmaxpu_filtered['bus'] = split_index[0].values\n",
+    "    ggt_pmaxpu_filtered['resource_class'] = split_index[1].astype(int) # resource_class as integer    \n",
+    "    ### Make pivot\n",
+    "    ggt_pmaxpu_pivot = ggt_pmaxpu_filtered.pivot(index=\"bus\", columns=\"resource_class\", values=feature)\n",
+    "\n",
+    "    styled_table = ggt_pmaxpu_pivot.style \\\n",
+    "        .set_caption(f\"Table with {feature} for {carrier}, according to bus and class.\") \\\n",
+    "        .format(\"{:.3f}\") \\\n",
+    "        .background_gradient(cmap=\"Blues\")\n",
+    "    \n",
+    "    display(styled_table)\n",
+    "else:\n",
+    "    print(f'Carrier {carrier} is not solar or wind type.. does it contain pmax_pu and classes?')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add a bar plot showing `CF`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "## bar width\n",
+    "width = 0.3 \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "\n",
+    "df_sorted = ggt_pmaxpu_filtered.sort_values([\"bus\", \"resource_class\"])\n",
+    "\n",
+    "buses = df_sorted[\"bus\"].unique()\n",
+    "resources = df_sorted[\"resource_class\"].unique()\n",
+    "\n",
+    "x = np.arange(len(buses))                 \n",
+    "offsets = np.linspace(-width/2.5, width/2.5, len(resources))  \n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "\n",
+    "colors = {\n",
+    "    \"CF\": \"#bc91d8\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "metrics_order = [\"CF\"]\n",
+    "\n",
+    "# To control added labels\n",
+    "labels_added = set()\n",
+    "\n",
+    "for i, res in enumerate(resources):\n",
+    "    df_res = df_sorted[df_sorted[\"resource_class\"] == res]\n",
+    "    pos = x + offsets[i]\n",
+    "    \n",
+    "    for metric in metrics_order:\n",
+    "        label = metric if metric not in labels_added else None\n",
+    "        ax.bar(\n",
+    "            pos,\n",
+    "            df_res[metric],\n",
+    "            width=width/3,\n",
+    "            color=colors[metric],\n",
+    "            alpha=0.7,\n",
+    "            label=label\n",
+    "        )\n",
+    "        labels_added.add(metric)\n",
+    "\n",
+    "ax.set_xticks(x)\n",
+    "ax.grid(axis=\"y\", linestyle=\"--\", alpha=0.6)\n",
+    "ax.set_xlabel(\"Bus\", fontsize=16)\n",
+    "ax.set_ylabel(\"CF\", fontsize=16)\n",
+    "ax.set_xticklabels(buses, fontsize=14)\n",
+    "ax.tick_params(axis=\"y\", labelsize=14)\n",
+    "ax.legend(fontsize=14)\n",
+    "\n",
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -546,8 +796,8 @@
     "##### Select carrier:\n",
     "carrier = 'onwind'\n",
     "\n",
-    "# For wind and solar, define class (number).\n",
-    "gen_class = 0\n",
+    "### For solar & onwind carriers, select the class number (note that here, 'all' is not valid)\n",
+    "resource_class = 0\n",
     "\n",
     "##### Select feature (uncomment one of the following):\n",
     "feature = 'CF' \n",
@@ -579,7 +829,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local, gen_class)"
+    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local, resource_class)"
    ]
   },
   {
@@ -720,6 +970,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Show the carriers associated with links."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lk['carrier'].drop_duplicates().reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Link type: DC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Place DC links in a dataFrame and show its content."
    ]
   },
@@ -797,6 +1070,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Link types: CCGT, OCGT, H2 Electrolysis, H2 Fuell cell, H2 turbine, battery charger, battery discharger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**NOTE**: Links represent different elements in the network. The aggregated capacity per carrier may need to be divided by the efficiency to properly reflect the capacity. For example, for CCGT, the link represents the conversion from gas to electricity, and the associated capacity refers to the input node. However, the CCGT capacity refers to the power capacity (output node).\n",
     "\n",
     "In the following, **\"_e\"** is added to express \"electric\" (power output, the efficiency is included)."
@@ -806,7 +1086,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Maps"
+    "##### Maps"
    ]
   },
   {
@@ -833,6 +1113,7 @@
     "# carrier = 'H2 Fuel Cell'\n",
     "# carrier = 'battery charger'\n",
     "# carrier = 'battery discharger'\n",
+    "# carrier = 'H2 turbine'\n",
     "\n",
     "### Select feature (uncomment one of the following):\n",
     "# feature = 'area' \n",
@@ -1285,7 +1566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-spain",
    "language": "python",
    "name": "python3"
   },
@@ -1299,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
